# xblock-lti-consumer

./: CHANGELOG.rst  Makefile  pyproject.toml  tox.ini
.github/workflows/: ci.yml  pypi-publish.yml  release.yml
lti_consumer/: __init__.py  lti_xblock.py
lti_consumer/plugin/: views.py
lti_consumer/tests/unit/: test_lti_xblock.py  test_models.py
lti_consumer/tests/unit/plugin/: test_views_lti_nrps.py
requirements/: base.txt  ci.txt  dev.txt  quality.txt  test.txt
src/lti_consumer/: __init__.py  models.py
src/lti_consumer/static/js/: xblock_studio_view.js
src/lti_consumer/templates/html/lti_studio_edit/: _step_setup.html
src/lti_consumer/tests/unit/plugin/: test_views.py
